Bug 115430 - Crash in: BindDispatch_Impl::statusChanged(com::sun::star::frame::FeatureStateEvent const&)
Summary: Crash in: BindDispatch_Impl::statusChanged(com::sun::star::frame::FeatureStat...
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
6.0.0.3 release
Hardware: x86-64 (AMD64) Linux (All)
: highest critical
Assignee: Maxim Monastirsky
URL:
Whiteboard: target:6.1.0 target:6.0.2
Keywords: bibisected, bisected, haveBacktrace, needUITest, regression
: 115766 115801 (view as bug list)
Depends on:
Blocks:
 
Reported: 2018-02-03 21:11 UTC by Bogdan Lashkov
Modified: 2022-04-15 10:06 UTC (History)
6 users (show)

See Also:
Crash report or crash signature: ["BindDispatch_Impl::statusChanged(com::sun::star::frame::FeatureStateEvent const&)"]


Attachments
bt with debug symbols (8.32 KB, text/plain)
2018-02-04 09:40 UTC, Julien Nabet
Details
Math editor crashing when exiting to Draw/Writer (77.19 KB, image/png)
2022-04-15 10:06 UTC, freeware
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Bogdan Lashkov 2018-02-03 21:11:12 UTC
This bug was filed from the crash reporting server and is br-a961a49d-9af2-4e9d-b5b4-ac258c86bb47.
=========================================
Hi!

The bag is simple: writer just crashes.
To repeat it, please do this:
1. enter formula editor mode
2. write something
3. press "esc" button to escape formula editor mode
4. press  right arrow key
And that is! At this moment my writer crashes.

I hope this will help you.

Thanks for your job!

Sincerely,
Bogdan.
Comment 1 Julien Nabet 2018-02-04 09:40:32 UTC
Created attachment 139566 [details]
bt with debug symbols

On pc Debian x86-64 with master sources updated yesterday, I could reproduce this.

I attached a bt + gdb session.
Comment 2 Xisco Faulí 2018-02-05 14:30:45 UTC
Regression introduced by:

author	Noel Grandin <noel.grandin@collabora.co.uk>	2017-10-06 12:17:55 +0200
committer	Noel Grandin <noel.grandin@collabora.co.uk>	2017-10-06 13:48:42 +0200
commit a5dbe5a8a9e98f2d79f2c535182fc557b561ed0f (patch)
tree 1e99bc70ad0c923996d2eccc35cec6caee6354f3
parent 62fc21675ccbfa5dcadbb2407729b804aac75ae2 (diff)
use rtl::Reference in svl,sfx2
instead of manual ref-counting

Bisected with: bibisect-linux64-6.0

Adding Cc: to Noel Grandin
Comment 3 Noel Grandin 2018-02-08 06:38:55 UTC
Sigh. I can't reproduce this at all on Ubuntu.
Julien, can you see in gdb what exactly is causing the segfault?
Comment 4 Julien Nabet 2018-02-08 07:45:00 UTC
(In reply to Noel Grandin from comment #3)
> Sigh. I can't reproduce this at all on Ubuntu.
> Julien, can you see in gdb what exactly is causing the segfault?

Except the bt with gdb session I attached, I don't know how to see this :-(
However, if you want me to test a patch or do a specific test, don't hesitate to tell!
Comment 5 Xisco Faulí 2018-02-08 10:36:54 UTC
(In reply to Noel Grandin from comment #3)
> Sigh. I can't reproduce this at all on Ubuntu.
> Julien, can you see in gdb what exactly is causing the segfault?

Hi Noel,
try this ( reproduced in linux mint 16.04)-
1. Open new writer document
2. Go to Insert - Object - Formula
3. Once the new dialog appears, press ESC
CRASH!
Comment 6 Maxim Monastirsky 2018-02-08 11:40:48 UTC
https://gerrit.libreoffice.org/49423/
Comment 7 Commit Notification 2018-02-08 22:32:51 UTC
Maxim Monastirsky committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=d09bdaaa660c40df241e6e1c0b8a3e905db85420

tdf#115430 BindDispatch_Impl needs a disposal method

It will be available in 6.1.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 8 Maxim Monastirsky 2018-02-08 22:33:47 UTC
Backport to 6-0 in gerrit.
Comment 9 Heiko Tietze 2018-02-15 09:42:08 UTC
(In reply to Maxim Monastirsky from comment #8)
> Backport to 6-0 in gerrit.

Issue was reported on the German user ML and I promised it will be fixed in 6.0.2
Comment 10 Julien Nabet 2018-02-15 09:57:15 UTC
(In reply to Heiko Tietze from comment #9)
> (In reply to Maxim Monastirsky from comment #8)
> > Backport to 6-0 in gerrit.
> 
> Issue was reported on the German user ML and I promised it will be fixed in
> 6.0.2

Just for information, the backport on 6.0 branch is in review here:
https://gerrit.libreoffice.org/#/c/49463/
Comment 11 Xisco Faulí 2018-02-16 09:25:27 UTC
*** Bug 115766 has been marked as a duplicate of this bug. ***
Comment 12 Maxim Monastirsky 2018-02-17 17:10:31 UTC
*** Bug 115801 has been marked as a duplicate of this bug. ***
Comment 13 Commit Notification 2018-02-21 20:36:26 UTC
Maxim Monastirsky committed a patch related to this issue.
It has been pushed to "libreoffice-6-0":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=f8a7d0426729b1982f1a03b933bc148acab12bd9&h=libreoffice-6-0

tdf#115430 BindDispatch_Impl needs a disposal method

It will be available in 6.0.2.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 14 freeware 2022-04-14 23:10:25 UTC
Hi.

I can confirm this bug is still present, at least in the latest Windows x64 version 7.3.2.2, also in still 7.2.6 and daily 7.3.4.0.0 (2022-04-13), fresh install (appdata cleared) or not, doesn't matter

What happens (but not always, I'd say 1 times out of 50):

when exitting Math opened from within Draw or Writer by hitting Escape or clicking outside editing box

the UI breaks somewhat half way through leaving the formula preview box from Math still visible, but empty window around.

This always means crash, but sometimes I can save the file while in that state and quit Writer without crashing the entire suite, but other times this makes Writer and every other LO app unresponsive and I have to kill it.

I'll attach screenshot when it happens again
Comment 15 freeware 2022-04-15 10:06:01 UTC
Created attachment 179583 [details]
Math editor crashing when exiting to Draw/Writer