tdf#115430 BindDispatch_Impl needs a disposal method

The dtor will never be called otherwise, because the
dispatcher is holding a reference to us, so
removeStatusListener is needed first.

Regression of a5dbe5a8a9e98f2d79f2c535182fc557b561ed0f
("use rtl::Reference in svl,sfx2")

Change-Id: I52da6152f0ddb0030d7354f7201e969d5a1f11cf
Reviewed-on: https://gerrit.libreoffice.org/49423
Reviewed-by: Noel Grandin <noel.grandin@collabora.co.uk>
Tested-by: Jenkins <ci@libreoffice.org>
Reviewed-by: Maxim Monastirsky <momonasmon@gmail.com>
(cherry picked from commit d09bdaaa660c40df241e6e1c0b8a3e905db85420)