sfx2/source/control/bindings.cxx
@@ -1607,6 +1607,7 @@ SfxItemState SfxBindings::QueryState( sal_uInt16 nSlot, std::unique_ptr<SfxPoolI
                 }
 
                 xDisp->removeStatusListener( xBind.get(), aURL );
+                xBind->Release();
                 xBind.clear();
                 if ( bDeleteCache )
                     DELETEZ( pCache );
